--- a/index5/style5.css
+++ b/index5/style5.css
@@ -205,7 +205,7 @@ a:hover {
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 3rem 0;
 }
@@ -220,7 +220,7 @@ a:hover {
 .card {
     height: 300px;
     width: 400px;
-    margin: 3rem 0 0;
+    margin: 3rem 0 0 0;
     background-image: url('./room.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -229,7 +229,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     filter: grayscale(0.5);
-    color: #ffffff;
+    color: white;
     cursor: pointer;
     transition: 0.3s;
 }
@@ -241,13 +241,22 @@ a:hover {
     color: rgb(109, 109, 109);
 }
 
+.card-wrapper {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
 .card-wrapper::before {
     content: '';
     position: absolute;
     height: 100px;
     width: 100px;
     display: block;
-    border: 1px solid #ffffff;
+    border: 1px solid white;
     opacity: 0;
     transition: 0.3s;
 }
@@ -274,7 +283,52 @@ a:hover {
 }
 
 .card:hover>.card-wrapper::before {
-    opacity: 1;
-    width: 350px;
     height: 250px;
+    width: 350px;
+    opacity: 1;
+}
+
+
+/* FOOTER */
+
+.footer {
+    width: 100%;
+    height: 100px;
+    background-color: #2E1C2B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* RESPONSIVO */
+
+@media (max-width: 800px) {
+    .social-media {
+        display: flex;
+        flex-direction: column;
+    }
+    .container {
+        margin-top: 0;
+    }
+    .card-container {
+        flex-direction: column;
+    }
+    .container .card-container:nth-child(1),
+    .container .card-container:nth-child(3) {
+        flex-direction: column-reverse;
+    }
+    .card {
+        height: 250px;
+        width: 250px;
+    }
+    .card-text {
+        width: 90%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+    .card:hover>.card-wrapper::before {
+        height: 190px;
+        width: 190px;
+    }
 }
